# internalServiceProvider

./: .gitignore  README.md
client/gameserverOperator/: center_server_addr.txt  client_def.hpp  gameserverOperator.pro  main.cpp  rabbitChat.pro
client/gameserverOperator/elegance/: CanNotCoverFiles.txt  elegance.hpp
client/gameserverOperator/elegance/common/: debug_message.cpp  debug_message.hpp  random.cpp  random.hpp  tools.cpp  tools.hpp
client/gameserverOperator/network/: msg_handler.cpp  msg_handler.h  networkagent.cpp  networkagent.h  networkmanager.cpp  networkmanager.h
client/gameserverOperator/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_manager.cpp  ui_manager.hpp
common/: commondef.hpp  cs_protocol_def.cpp  cs_protocol_def.hpp  cs_protocol_def.xml
common/protocol/: cs_protocol_def.cpp  cs_protocol_def.hpp  cs_protocol_def.xml  internal_protocol_def.cpp  internal_protocol_def.hpp  internal_protocol_def.xml
common/xml/: serverconfig.cpp  serverconfig.hpp
server/: CMakeLists.txt
server/conf/: center_server_addr.txt  operate_list.txt  project_list.txt  serverconfig.xml
server/src/: server_center.cpp  server_game_operator.cpp
server/src/center/: center_def.hpp  services_manager.cpp  services_manager.hpp
server/src/center/network/: message_handler.cpp  message_handler.hpp  network_agent.cpp  network_agent.hpp
server/src/game_operator/: game_operator_def.hpp  operate_manager.cpp  operate_manager.hpp
server/src/game_operator/network/: message_handler.cpp  message_handler.hpp  network_agent.cpp  network_agent.hpp
(+18 files in other folders)
